--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:label="flutter_sandbox"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        
+        <!-- Google Maps API Key -->
+        <!-- 값은 build.gradle.kts의 manifestPlaceholders에서 설정됩니다 -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="${MAPS_API_KEY}"/>
+        
         <!-- 카카오 로그인 커스텀 URL 스킴 설정 -->
         <activity 
             android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
@@ -15,7 +23,8 @@
 
                 <!-- "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식의 앱 실행 스킴 설정 -->
                 <!-- 카카오 로그인 리다이렉트 URI -->
-                <data android:scheme="kakaoccfc6bfb577d47dc5ab4a502b03ed075" android:host="oauth"/>
+                <!-- 값은 build.gradle.kts의 manifestPlaceholders에서 설정됩니다 -->
+                <data android:scheme="${KAKAO_SCHEME}" android:host="oauth"/>
             </intent-filter>
         </activity>
         <activity
@@ -42,9 +51,10 @@
             </intent-filter>
         </activity>
         <!-- 카카오 네이티브 앱 키 등록 -->
+        <!-- 값은 build.gradle.kts의 manifestPlaceholders에서 설정됩니다 -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
-            android:value="caf14c49b3485ed55d2f9fb637571e18"/>
+            android:value="${KAKAO_APP_KEY}"/>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
