--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.3.1
   image_picker: ^1.1.2
   uuid: ^4.5.1
+  google_maps_flutter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -66,9 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/dummy_data/아이폰.jpeg
+    - lib/dummy_data/맥북.jpeg
+    - lib/dummy_data/에어포스.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
