--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.2.5
   intl: ^0.20.2
   shared_preferences: ^2.2.2
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
