fix: 채팅 읽음 처리 및 Firestore 인덱스 오류 수정
1. 읽음 처리 로직 개선
   - 채팅 페이지 진입 시 즉시 읽음 처리
   - unreadCount Map 전체 업데이트 방식으로 변경
   - 읽지 않은 메시지가 있을 때만 읽음 처리 실행
   - 디버그 로그 추가

2. Firestore 인덱스 오류 해결
   - isRead와 senderId 복합 쿼리 제거
   - 클라이언트 측에서 읽지 않은 메시지 필터링
   - 인덱스 없이도 작동하도록 개선

3. functions/.gitignore 수정
   - 소스 파일(index.js, .eslintrc.js) 포함하도록 수정

--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,6 +1,7 @@
-# Compiled JavaScript files
-*.js
-*.js.map
+# Compiled JavaScript files (빌드된 파일만 제외)
+# 소스 파일은 포함: index.js, .eslintrc.js 등
+# *.js
+# *.js.map
 
 # Node.js dependencies
 node_modules/
